@@ -1,4 +1,6 @@
 DIST memoizable-0.3.1.gem 11264 SHA256 12da75d99fa627465023a4e37cd3871a24d954550e4c58cc638fe9c45ee8070d SHA512 818d0a682a11ac66ef7dade8e0b1c80b9f6fc787392226d1e182528056d5dd158a18dc179ac2769f11aef32c91e3281e7d316400ab78840730f8a84e93204dff WHIRLPOOL 264bbf7e4ab68245cf806501ce3b34f9cf28bd2ad3cccfed8b4fdc349f67c24b829164cf439d7663316a8fc6ae8ef5b554dc15c13855df4719bee59cc42478bf
+DIST memoizable-0.4.0.gem 12288 SHA256 99e1a341f0208bd3822565741a3dcd66766b35107ba2192e2ec3138e13430f76 SHA512 4f460db21b5d510db1cba2f4cffebfc0d392c37bb6475c41d4270caff1f6066b5af3e2d2509e8da790e973fe2bb64ea152db403563b95d352ba36eaa1511cb0c WHIRLPOOL 2594d45e74cf8776ffc3ee0620da7be953815f1a27cdc588703fc1dc05309465006825dae730d4a6ee4c778c3dd41e2f29ff6a32c59e8faed35cb6afff6e46c8
 EBUILD memoizable-0.3.1.ebuild 611 SHA256 9f9f6e84aa2feacbc6509576ae76eb9a9ead86624be397775f07c78faa4d74ef SHA512 173d0ddb923eb47e1ca829a76ae8a0cb411281a87d6ae228d0773e3078d2a189d0da069a92e7b44b53c12346014639450aac01c73fbbe705e2e29e24c2bad20d WHIRLPOOL f0a3cdb1ac60e53f770be5a41af55ef778fd22680edc2d4c4fa08ed291bb0ebe4efd13a04e74f91bc3f177f8d25d56195d051ff06a39090699bb6b75ac11268b
-MISC ChangeLog 669 SHA256 c29e8bcd3a324d02008dda097de34609ceb723515309135208981b49f7adbb51 SHA512 472f42f0094742ed9d607d6e5ce5578f5b72ba61169365af8f2a292ada46a6d68247459fe925bc5ad2928606998baeccb079b0083c035d327f3facf5bf836e27 WHIRLPOOL e1d4204a52c76cb5aaa18bf48ddb2721954c56ea7118359745f18b416983931377d7e3e44832f83706d159ca3e4bfdbdae6212c5307cdcc56e9f7a834c6ece60
+EBUILD memoizable-0.4.0.ebuild 611 SHA256 f5feffb760546c4cc3dfad3ad3150ab2e6aa72c23e0fc38f9e699923cd1c1164 SHA512 edc52bef9e33643f700ab6222ac6e640db4dcdfd293dab8c71528e28157a3bf23e31e6e3e6f1d8b636bfda7edfab9f6dd2983282ace2c907b721b4211ad9908c WHIRLPOOL 3c116a7227e0bba3f839bf88b29b1e9dda196328dabce93c57e0df34957ac7b7829d93625343ce737c2f8d369ecb72cca8f62f8778cb2754a83703b98e020b3c
+MISC ChangeLog 806 SHA256 c39e4e5b67cf98ab2e40b5d6407d24ff07b87b06c34539c76db2428a71085bd5 SHA512 50c230a2b3f7d10f906c670a3e65312ebfaebb8577366a2438f8b245c352b67d20f46c0b4202e7b3f106384307716f46cb0aefa8099d5a518338b3fbbde2c4f4 WHIRLPOOL c50130be6cbc14f3104a1f9318250b963a6d7a70a757b3cef827b98653bc7aa39166f922ec63a8059621abd58b3ad23d3f9b5083e7c14598caf0392f29449178
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
