@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/memoizable
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/memoizable/ChangeLog,v 1.3 2013/12/18 12:54:14 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/memoizable/ChangeLog,v 1.4 2014/01/03 22:14:04 mrueg Exp $
+
+*memoizable-0.4.0 (03 Jan 2014)
+
+  03 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +memoizable-0.4.0.ebuild:
+  Version bump. Cleanup old.
 
 *memoizable-0.3.1 (18 Dec 2013)
 
